--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
       <header id="header">
         <img id="header-img" src="tesla-logo.png">
         <nav id="nav-bar">
-          <a class="nav-link" href="index.html">Home</a>
-          <a class="nav-link" href="products.html">Products</a>
-          <a class="nav-link" href="contact.html">Contact</a>
+          <a class="nav-link" href="#nav-bar">Home</a>
+          <a class="nav-link" href="#video-container">Products</a>
+          <a class="nav-link" href="#form">Contact</a>
         </nav>
       </header>
       <div id="video-container">
@@ -20,7 +20,7 @@
         <label for="email">Email</label>
         <input id="email" type="email" name="email" 
         placeholder="Email" required>
-        <button id="submit" type="submit">Submit</button>
+        <input id="submit" type="submit">
       </form>
     </div>
   </body>
